--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -1,3 +1,18 @@
-/* .filtered-parks-container {
+.filtered-parks-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+}
 
-} */
+.park-cards {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1.5rem;
+    padding: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
