--- a/src/components/ParkInfo/ParkInfo.css
+++ b/src/components/ParkInfo/ParkInfo.css
@@ -2,3 +2,28 @@
     width: 2rem;
     height: 2rem;
 }
+
+.individual-park {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.individual-park-container {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+}
+
+.individual-park-image {
+    width: 25rem;
+    height: 20rem;
+}
+
+.add-visited {
+    display: flex;
+    flex-direction: row;
+}
+
