--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,4 @@
-html {
+html, body {
   height: 100%;
 }
 
@@ -7,11 +7,10 @@ html {
   flex-direction: column;
   text-align: center;
   align-items: center;
+  height: 100%;
   background-image: url("../../assets/forest-background.jpg");
-  background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
-  height: 100vh;
+  background-repeat: no-repeat;
 }
 
 nav {
