--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,6 +8,7 @@ html, body {
   text-align: center;
   align-items: center;
   height: 100%;
+  font-family: 'Roboto', cursive;
   background-image: url("../../assets/forest-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
