--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -17,6 +17,8 @@ a {
 .park-name {
     font-family: 'Amatic SC', cursive;
     font-weight: bold;
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
 }
 
 .park-image {
