--- a/src/components/ParkInfo/ParkInfo.css
+++ b/src/components/ParkInfo/ParkInfo.css
@@ -1,6 +1,9 @@
+
 .stamp {
     width: 2rem;
     height: 2rem;
+    vertical-align: middle;
+    margin-left: 0.5rem;
 }
 
 .individual-park-container {
@@ -17,6 +20,10 @@
     align-items: center;   
     width: 90%;
 }
+.individual-park-name {
+    font-family: 'Amatic SC', cursive;
+    font-size: 3rem;
+}
 
 .individual-park-image {
     width: 25rem;
@@ -25,15 +32,67 @@
 
 .park-info {
     text-align: left;
+    background-color:   #A4AFAE;
+    border-radius: 6px;
+    padding: 1rem;
+    font-family: 'Roboto', cursive;
+    margin-bottom: 1rem;
+    border: 2px solid #294D46;
+}
+
+.date-picker {
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    background-color: #294D46;
+    border-radius: 6px;
+}
+
+label {
+    font-size: 1rem;
+}
+
+.add-visit-btn {
+    width: 10rem;
+    margin-bottom: 3rem;
+    justify-content: center;
+    align-items: center;   
+    text-align: center;
+    font-family: 'Roboto', cursive;
+    background-color: #E6DEE3;
+    color: black;
+    border-radius: 6px;
+    border: 2px solid #A4AFAE;
+}
+
+.add-visit-btn:hover {
+    background-color: #032423;
+    border: 2px solid #294D46;
+    color: white;
 }
 
 .add-visited {
+    color: white;
+    font-family: 'Roboto', cursive;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+}
+.visited {
+    color: white;
 }
 
 .approval-check-image {
     width: 5rem;
     height: 5rem;
+}
+
+.been-stamped {
+    color: white;
+    padding: 0.5rem;
+    border-radius: 6px;
+    background-color: #294D46;
+    font-family: 'Roboto', cursive;
 }
 
