--- a/src/components/Stamp/Stamp.css
+++ b/src/components/Stamp/Stamp.css
@@ -1,7 +1,7 @@
-/* .stamp-card {
+.stamp-card {
     display: flex;
     justify-content: center;
-} */
+}
 
 .passport-stamp {
     position: relative;
@@ -34,6 +34,8 @@
 
 .stamp-info {
     position: relative;
+    top: 7px;
+    left: 7px;
     width: 9rem;
     top: 168px;
     background-color: #A4AFAE;
@@ -52,6 +54,20 @@
     font-size: 0.7rem;
     margin: 0;
 }
+
+@media screen and (max-width: 500px) {
+    .stamp-cards {
+        width: 70%;
+    }
+}
+
+@media screen and (min-width: 500px) and (max-width: 900px) {
+    .passport-stamp {
+        width: 100%;
+    }
+}
+
+
 
 
 
