--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,30 +1,42 @@
-
-.App {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
+ html {
+  margin: 0;
   background-image: url("../../../public/forest-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+ }
+ 
+ App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100vw;
+  height: 100vh;
   font-family: 'Roboto', cursive;
 }
 
 nav {
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
 .logo {
   margin-top: 2rem;
-  width: 50%;
+  height: 7rem;
 }
 
 .passport-link {
   margin-right: 1rem;
-  width: 20%;
+  height: 8rem;
+}
+
+.main-page {
+  text-align: center;
+}
+
+.error-message {
+  text-align: center;
 }
