--- a/src/components/ParkInfo/ParkInfo.css
+++ b/src/components/ParkInfo/ParkInfo.css
@@ -83,6 +83,9 @@ label {
 }
 .visited {
     color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .approval-check-image {
@@ -98,3 +101,8 @@ label {
     font-family: 'Roboto', cursive;
 }
 
+h2 {
+    text-align: center;
+    font-family: 'Roboto', cursive;
+
+}
