--- a/src/components/Passport/Passport.css
+++ b/src/components/Passport/Passport.css
@@ -15,19 +15,7 @@
     justify-content: center;
 }
 
-
-@media screen and (max-width: 500px) {
-    .stamp-cards {
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 3rem;
-    padding: 1.5rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    }
-}
-
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 500px) and (max-width: 900px) {
     .stamp-cards {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1.5rem;
