--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,18 +1,17 @@
- html {
-  margin: 0;
-  background-image: url("../../../public/forest-background.jpg");
+html {
+  height: 100%;
+ }
+
+.App {
+  background-image: url("../../../public/forest-backdrop.jpg");
   background-size: cover;
   background-repeat: no-repeat;
- }
- 
- App {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  align-items: center;
+  text-align: center;
   font-family: 'Roboto', cursive;
 }
 
