--- a/src/components/ParkInfo/ParkInfo.css
+++ b/src/components/ParkInfo/ParkInfo.css
@@ -1,4 +1,3 @@
-
 .stamp {
     width: 2rem;
     height: 2rem;
@@ -18,8 +17,8 @@
     flex-direction: column;
     justify-content: center; 
     align-items: center;   
-    width: 90%;
 }
+
 .individual-park-name {
     font-family: 'Amatic SC', cursive;
     font-weight: bold;
@@ -31,8 +30,7 @@
 }
 
 .individual-park-image {
-    width: 25rem;
-    height: 20rem;
+    width: 55%;
 }
 
 .park-info {
@@ -43,6 +41,7 @@
     font-family: 'Roboto', cursive;
     margin-bottom: 1rem;
     border: 2px solid #294D46;
+    width: 75%;
 }
 
 .date-picker {
@@ -84,6 +83,7 @@ label {
     flex-direction: column;
     align-items: center;
 }
+
 .visited {
     color: white;
     display: flex;
@@ -107,5 +107,11 @@ label {
 h2 {
     text-align: center;
     font-family: 'Roboto', cursive;
-
 }
+
+@media screen and (max-width: 900px) {
+    .individual-park-image {
+        width: 100%;
+    }
+}
+
